----------------------------------------------------------------------
 OmegaT 2.1.4 update 2
----------------------------------------------------------------------
  2 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.1.4 update 2 vs. 2.1.4 update 1

  Implemented requests:

  - Load TMXs from nested folders
  http://sourceforge.net/support/tracker.php?aid=2986574

  - Insert exact matches from TMXs in the auto folder
  http://sourceforge.net/support/tracker.php?aid=2131989

----------------------------------------------------------------------
 OmegaT 2.1.4 update 1
----------------------------------------------------------------------
  6 Enhancements
  6 Bugfixes
----------------------------------------------------------------------
2.1.4 update 1 vs. 2.1.4

  Implemented requests:

  - SRT filter: read time group into a single segment
  http://sourceforge.net/support/tracker.php?aid=2980046

  - Spell checker dialog improvements
  http://sourceforge.net/support/tracker.php?aid=2980991

  - TBX: recognize <descrip> elements
  http://sourceforge.net/support/tracker.php?aid=2978608

  - TBX: display termNotes only for target language
  http://sourceforge.net/support/tracker.php?aid=2978610

  Other enhancements:

   - Log file switched to UTF-8. It was previously in system encoding.

   - It is possible to specify a target tokenizer with --ITokenizerTarget.
If it is not specified, the source tokenizer will be used.

  Bug fixes:

  - No filters available when locale is tr
  http://sourceforge.net/support/tracker.php?aid=2976351

  - Exception when project was reloaded after some project properties
changes

  - Specific segmentation processing was not working when CJK language 
codes were entered in lowercase

  - TBX terms with country code (e.g., de-AT) were ignored

  - Only one translation is kept in TBX glossaries
  http://sourceforge.net/support/tracker.php?aid=2978575
